examples/test/testpolicy14329.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14329
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key28: value21
      key49: value25
      key32: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value30
          key42: value2
          key41: value27
